objects/Material_Purchase_Line_Item__c/Material_Purchase_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Material Purchase Line Item</label>
    <nameField>
        <displayFormat>MPLI-{000000}</displayFormat>
        <label>Material Purchase Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Purchase Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>