objects/Material_Purchase_Line_Item__c/fields/Material_Item__c.field-meta.xml
<CustomField>
    <fullName>Material_Item__c</fullName>
    <label>Material Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Material_Item__c.Mt_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Material_Item__c</referenceTo>
    <relationshipLabel>Material Purchase Line Items</relationshipLabel>
    <relationshipName>Material_Purchase_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>