objects/Material_Purchase_Line_Item__c/fields/Material_Order__c.field-meta.xml
<CustomField>
    <fullName>Material_Order__c</fullName>
    <label>Material Order</label>
    <referenceTo>Material_Order__c</referenceTo>
    <relationshipLabel>Material Purchase Line Items</relationshipLabel>
    <relationshipName>Material_Purchase_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>