objects/Material_Purchase_Line_Item__c/fields/Qty__c.field-meta.xml
<CustomField>
    <fullName>Qty__c</fullName>
    <label>Qty Ordered</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>