objects/Material_Purchase_Line_Item__c/fields/Qty_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Qty_Outstanding__c</fullName>
    <label>Qty Outstanding</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>